--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
     ],
     "require": {
         "php": "~7.4.8",
-        "ext-mbstring": "*"
+        "sendgrid/sendgrid": "~7",
+        "ext-mbstring": "*",
         "phpunit/phpunit": "3.7.*"
-        "sendgrid/sendgrid": "~7"
     }
 }
